--- a/wrappers/cpp/class_impl.mustache
+++ b/wrappers/cpp/class_impl.mustache
@@ -43,6 +43,34 @@ void {{{className}}}::removeListener(std::shared_ptr<{{{listenerClassName}}}> &l
 }
 {{/ismultilistenable}}
 
+{{#isfactory}}
+std::shared_ptr<Core> Factory::createCore(const std::shared_ptr<CoreListener> & cbs, const std::string & configPath, const std::string & factoryConfigPath) const {
+	::LinphoneFactory *factory = linphone_factory_get();
+	::LinphoneCoreCbs *c_cbs = cbs != nullptr ? Core::createCallbacks(cbs) : NULL;
+	::LinphoneCore *core_ptr = linphone_factory_create_core(factory, c_cbs, configPath.c_str(), factoryConfigPath.c_str());
+	std::shared_ptr<Core> core = std::static_pointer_cast<Core,Object>(cPtrToSharedPtr((belle_sip_object_t *)core_ptr, false));
+	if (core != nullptr && cbs != nullptr) {
+		std::static_pointer_cast<MultiListenableObject,Core>(core)->addListener(cbs);
+		cbs->setCallbacks((belle_sip_object_t *)c_cbs);
+	}
+	if (c_cbs) linphone_core_cbs_unref(c_cbs);
+	return core;
+}
+
+std::shared_ptr<Core> Factory::createCoreWithConfig(const std::shared_ptr<CoreListener> & cbs, const std::shared_ptr<Config> & config) const {
+	::LinphoneFactory *factory = linphone_factory_get();
+	::LinphoneCoreCbs *c_cbs = cbs != nullptr ? Core::createCallbacks(cbs) : NULL;
+	::LinphoneCore *core_ptr = linphone_factory_create_core_with_config(factory, c_cbs, (::LinphoneConfig *)sharedPtrToCPtr(config));
+	std::shared_ptr<Core> core = std::static_pointer_cast<Core,Object>(cPtrToSharedPtr((belle_sip_object_t *)core_ptr, false));
+	if (core != nullptr && cbs != nullptr) {
+		std::static_pointer_cast<MultiListenableObject,Core>(core)->addListener(cbs);
+		cbs->setCallbacks((belle_sip_object_t *)c_cbs);
+	}
+	if (c_cbs) linphone_core_cbs_unref(c_cbs);
+	return core;
+}
+{{/isfactory}}
+
 {{#methods}}
 {{{implPrototype}}} {
 	{{{sourceCode}}}
